--- a/agriculture-commercial-buildings.html
+++ b/agriculture-commercial-buildings.html
@@ -28,7 +28,7 @@
     <nav id="navbar"></nav>
     <div class="hero-nav commercial">
     <div class="hero-nav__inner">
-        <h1>Agriculture & Commercial Buildings in Cedar Falls, IA</h1>
+        <h1>Agriculture & Commercial Buildings in Cedar Falls and Cedar Rapids, IA</h1>
         <a class="btn btn-primary" href="/contact-us">See Our Work</a>
     </div>
 </div>
@@ -51,15 +51,6 @@
           </div>
       </div>
     </div>
-    <!-- <section class="gradient-banner">
-      <div class="gradient-content">
-        <span>
-          Don’t wait any longer to get started on your bathroom remodel. Contact us today to arrange for bathroom remodeling services.
-        </span>
-        <div class="triangle"></div>
-        <a class="btn btn-secondary">Contact Us</a>
-      </div>
-    </section> -->
     <section id="contactus"></section>
     <footer id="footer">
     </footer>
