--- a/basement-renovations.html
+++ b/basement-renovations.html
@@ -28,19 +28,19 @@
     <nav id="navbar"></nav>
     <div class="hero-nav basement">
     <div class="hero-nav__inner">
-        <h1>Basement Renovations in Cedar Falls, IA</h1>
+        <h1>Basement Renovations in Cedar Falls and Cedar Rapids, IA</h1>
         <a class="btn btn-primary" href="#our-work">See Our Basement Renovations</a>
     </div>
 </div>
 <div class="subpage-content">
   <h2>Transform your basement into a fun room</h2>
-    <p>T.E.A.M. Builders Ltd. can take charge of your basement remodel in Cedar Falls, IA or surrounding areas. Whether you want to convert your boring basement into a home gym, an entertainment room or a separate apartment, we can make it happen.
+    <p>T.E.A.M. Builders Ltd. can take charge of your basement remodel in Cedar Falls, Cedar Rapids or surrounding areas. Whether you want to convert your boring basement into a home gym, an entertainment room or a separate apartment, we can make it happen.
     </p>
     <p>We have the tools and experience needed to remodel your basement into a full-featured living space. We can repaint your basement, add a bathroom, install new flooring and lighting and tear down unwanted walls. In short, we’ll bring your dream basement to life.</p>
-    <p>Reach out to us right away to schedule basement renovation services. We’ve completed a number of basement renovations for your Cedar Falls neighbors-now it’s your turn.</p>
+    <p>Reach out to us right away to schedule basement renovation services. We’ve completed a number of basement renovations for your Cedar Falls and Cedar Rapids neighbors. Now it’s your turn.</p>
     <br />
     <h3>Check out the benefits of a basement remodel</h3>
-    <p>T.E.A.M. Builders Ltd. can install a wide variety of basement upgrades in your Cedar Falls, IA home. Remodeling your basement will:</p>
+    <p>T.E.A.M. Builders Ltd. can install a wide variety of basement upgrades in your Cedar Falls or Cedar Rapids, IA home. Remodeling your basement will:</p>
     <div class="feature-container">
       <div class="feature">
         <i class="fa fa-check-circle" aria-hidden="true"></i>
