--- a/client-feedback-form.html
+++ b/client-feedback-form.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA and Cedar Rapids, IA">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
