--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Find a Home Remodeler in Cedar Falls, IA. Hire a local home renovation pro. Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls, IA is equipped to handle all your home renovation needs.">
+    <meta name="description" content="Find a Home Remodeler in Cedar Falls or Cedar Rapids, IA. Hire a local home renovation pro. Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls or Cedar Rapids, IA is equipped to handle all your home renovation needs.">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
       <!-- Scripts -->
@@ -28,19 +28,18 @@
 
     </head>
   <body>
-    <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav team">
         <div class="hero-nav__inner">
-            <h1>Find a Home Remodeler In Cedar Falls, IA</h1>
-            <a class="btn btn-primary calendly-scheduler" href="#calendly-scheduler">Schedule a Call</a>
+            <h1>Find a Home Remodeler In Cedar Falls or Cedar Rapids, IA</h1>
+            <a class="btn btn-primary" href="/contact-us">Schedule a Call</a>
         </div>
     </div>
     <div class="subpage">
       <br />
       <br />
       <h2>Hire a local home renovation pro</h2>
-      <p>Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls, IA is equipped to handle all your home renovation needs. We offer a range of interior and exterior remodeling services. You can count on us to help your home stand out.</p>
+      <p>Thank you for choosing T.E.A.M. Builders Ltd. Our remodeling contractor in Cedar Falls or Cedar Rapids, IA is equipped to handle all your home renovation needs. We offer a range of interior and exterior remodeling services. You can count on us to help your home stand out.</p>
       <br />
       <p>Please use the form on this page to email us.</p>
       <section id="contactus"></section>
