--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Relax on a Spacious Backyard Deck Make sure you hire an experienced deck builder in Cedar Falls, IA. Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time!">
+    <meta name="description" content="Relax on a Spacious Backyard Deck Make sure you hire an experienced deck builder in Cedar Falls or Cedar Rapids, IA. Our professional deck builder can construct a treated wood, cedar wood, Trex or AZEK composite deck on your property in no time!">
    <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -33,14 +33,14 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Make sure you hire an experienced deck builder in Cedar Falls, IA</h2>
+  <h2>Make sure you hire an experienced deck builder in Cedar Falls or Cedar Rapids, IA</h2>
     <p>Our experienced sales associate will meet with you at your home, go over your size and material preferences and get to work designing and budgeting your dream deck. You’ll be relaxing in the open air and flipping burgers on your backyard deck in no time. Our experienced staff can work with your budget and help you make the best decision that will provide the best value to your home.
     </p>
     <br />
-    <p>T.E.A.M. Builders LTD has experience building custom decks and pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.</p>
+    <p>T.E.A.M. Builders LTD has experience building custom decks and pergolas of all kinds on properties in the Cedar Falls or Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
     <br />
     <h3>Enjoy backyard cookouts all summer long</h3>
-    <p>Looking for a trustworthy deck or pergola builder? Look no further. T.E.A.M. Builders LTD constructs custom decks in Cedar Falls, IA and surrounding areas. A backyard deck/pergola will:</p>
+    <p>Looking for a trustworthy deck or pergola builder? Look no further. T.E.A.M. Builders LTD constructs custom decks in Cedar Falls or Cedar Rapids, IA and surrounding areas. A backyard deck/pergola will:</p>
     <br />
     <div id="mc_embed_signup">
         <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
