--- a/exterior-remodeling.html
+++ b/exterior-remodeling.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls and Cedar Rapids, IA">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -24,7 +24,6 @@
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
   </head>
   <body>
-    <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav exterior-remodeling">
     <div class="hero-nav__inner">
@@ -33,11 +32,11 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Speak with our deck builder in Cedar Falls, IA today</h2>
-    <p>Does your house need a face-lift? Don’t let your home’s old, dirty exterior diminish your curb appeal. Get in touch with the pros at T.E.A.M. Builders Ltd. today. Whether you want to update the <a href="/siding" class="green-link">siding</a> on your house or need <a href="/fencing" class="green-link">fence</a> installation help in Cedar Falls, IA, you can rely on us to finish the job.
+  <h2>Speak with our deck builder in Cedar Falls and Cedar Rapids, IA today</h2>
+    <p>Does your house need a face-lift? Don’t let your home’s old, dirty exterior diminish your curb appeal. Get in touch with the pros at T.E.A.M. Builders Ltd. today. Whether you want to update the <a href="/siding" class="green-link">siding</a> on your house or need <a href="/fencing" class="green-link">fence</a> installation help in Cedar Falls or Cedar Rapids, IA, you can rely on us to finish the job.
     </p>
     <p>Once we’re finished, you’ll be amazed by how beautiful your house looks. Trust us-your neighbors will notice, too.</p>
-    <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now speak with a deck builder in Cedar Falls, IA.</p>
+    <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now speak with a deck builder in Cedar Falls and Cedar Rapids, IA.</p>
     <div id="how-we-can-help"></div>
     <br />
       <div class="text-align-left">
@@ -185,7 +184,7 @@
     <section class="gradient-banner">
       <div class="gradient-content">
         <span>
-          Don’t wait any longer to hire our fence installation team in Cedar Falls, IA to complete your exterior remodeling project.
+          Don’t wait any longer to hire our fence installation team in Cedar Falls and Cedar Rapids, IA to complete your exterior remodeling project.
         </span>
         <div class="triangle"></div>
         <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
