--- a/fencing.html
+++ b/fencing.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.">
+    <meta name="description" content="T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -32,8 +32,8 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Get started on your fence installation project in Cedar Falls, IA</h2>
-    <p>Are you worried about children and pets wandering off? Do you need more privacy? We can help! T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.
+  <h2>Get started on your fence installation project in Cedar Falls and Cedar Rapids, IA</h2>
+    <p>Are you worried about children and pets wandering off? Do you need more privacy? We can help! T.E.A.M. Builders Limited provides professional fence installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Our fencing contractor specializes in installing JAM Systems picket and privacy fencing.
     </p>
     <p>If you’re looking for a fence that looks attractive, offers visibility and acts as a security barrier, picket fencing is the way to go. If you need more seclusion and don’t want nosey neighbors peering in, you should install a privacy fence. We have a wide variety of picket and privacy fence options to choose from.</p>
     <p>We also offer your standard galvanized and black coated chain link. Our fencing installers can get you the most bang for your buck with a chain link fence while also providing a long term solution to keeping your kids and pets in and other critters out. Our fencing installers will secure all fence posts in concrete to ensure stability and durability for years to come.</p>
@@ -66,7 +66,7 @@
           <br />
             <div class="bg-gray">
             <h3>Keep your kids and pets safe.</h3>
-            <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls, IA area. Installing a fence is a smart investment because it will:</p>
+            <p>Choose T.E.A.M. Builders for fence installation services in the Cedar Falls and Cedar Rapids, IA area. Installing a fence is a smart investment because it will:</p>
             <p>Call 319-481-8326 now to schedule fence installation services. Our fencing contractor will be glad to provide you with a free estimate. We also offer a wide variety of in-house financing to clients who are interested in financing options.</p>
             <br />
             <a class="btn btn-primary" href="/contac">Contact Us</a>
