--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
    </script>
 
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
-    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
-    <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar valley, t.e.a.m. builders cedar falls">
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls and Cedar Rapids, IA">
+    <meta name="keywords" content="home remodeling cedar falls, home remodeling cedar rapids, home remodeling cedar valley, t.e.a.m. builders cedar falls, t.e.a.m. builders cedar rapids">
     <meta property "og:image" content="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" />
     <meta property "og:image:type" content="/image/png" />   
     <meta property "og:image:width" content="250" />  
@@ -150,9 +150,9 @@
   <section id="below-main-content-section">
     <div class="below-main-content">
       <h2>Make Your House Look Like New</h2>
-      <h3>SCHEDULE A CONSULTATION WITH A REMODELING CONTRACTOR IN CEDAR FALLS, IA</h3>
+      <h3>SCHEDULE A CONSULTATION WITH A REMODELING CONTRACTOR IN CEDAR FALLS OR CEDAR RAPIDS, IA</h3>
       <p style="">Our home remodeler should be the top choice for your home renovation project. With more than a decade of experience, the crew at TEAM Builders LTD has what it takes to transform your current house into your dream home. There is no project too big or too small for us.</p>
-      <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls, IA</p>
+      <p>Call 319-481-8326 now to discuss your design ideas with a skilled remodeling contractor in Cedar Falls and Cedar Rapids, IA</p>
       <br />
       <a href="/process" class="btn btn-primary">Our Process</a>
     </div>
