--- a/interior-remodeling.html
+++ b/interior-remodeling.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Home Remodeling Contractor in Cedar Falls, IA">
+    <meta name="description" content="Home Remodeling Contractor in Cedar Falls and Cedar Rapids, IA">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -32,15 +32,15 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Learn about our kitchens and basement/home additions and remodeling services in Cedar Falls, IA</h2>
-    <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their kitchens, bath, and basement/home additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.
+  <h2>Learn about our kitchens and basement/home additions and remodeling services in Cedar Falls and Cedar Rapids, IA</h2>
+    <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their kitchens, bath, and basement/home additions renovations in Cedar Falls and Cedar Rapids, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.
     </p>
-    <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
+    <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens, bath, and basement/home additions remodeling ideas in Cedar Falls and Cedar Rapids, IA.</p>
     <br />
       <div class="text-align-left" id="how-we-can-help">
             <h3>Bring your remodeling vision to life</h3>
-            <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations" class="green-link">kitchens</a>, bath, and <a href="/basement-renovations" class="green-link">basement/home</a> additions renovations in Cedar Falls, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
-            <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls, IA.</p>
+            <p>Home is where the heart is—so turn your house into a home you’ll love. When you hire the pros at T.E.A.M. Builders Ltd., you can rest assured your house is in great hands. We’ve helped many homeowners with their <a href="/kitchen-renovations" class="green-link">kitchens</a>, bath, and <a href="/basement-renovations" class="green-link">basement/home</a> additions renovations in Cedar Falls and Cedar Rapids, IA. We’ll make your home the envy of the neighborhood for a price that fits your budget.</p>
+            <p>Call us at <a href="tel:3194818326" class="green-link">319-481-8326</a> now to speak with a pro about your kitchens and basement/home additions remodeling ideas in Cedar Falls and Cedar Rapids, IA.</p>
             <br>
             <div class="feature-container">
                 <div class="feature">
@@ -120,7 +120,7 @@
     <section class="gradient-banner">
       <div class="gradient-content">
         <span>
-          Don’t delay your home remodeling project any longer. Contact us today to get started on your kitchens, bath, and basement/home additions renovation project in Cedar Falls, IA.
+          Don’t delay your home remodeling project any longer. Contact us today to get started on your kitchens, bath, and basement/home additions renovation project in Cedar Falls and Cedar Rapids, IA.
         </span>
         <div class="triangle"></div>
         <a class="btn btn-secondary">Contact Us</a>
