--- a/kitchen-renovations.html
+++ b/kitchen-renovations.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders Ltd. completes kitchen renovations in Cedar Falls, IA and surrounding areas. Hire us to transform your outdated kitchen into a modern space you’ll enjoy spending time in for years to come.">
+    <meta name="description" content="T.E.A.M. Builders Ltd. completes kitchen renovations in Cedar Falls and Cedar Rapids, IA and surrounding areas. Hire us to transform your outdated kitchen into a modern space you’ll enjoy spending time in for years to come.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -28,13 +28,13 @@
     <nav id="navbar"></nav>
     <div class="hero-nav kitchen">
     <div class="hero-nav__inner">
-        <h1>Get Started on Your Kitchen Remodel in Cedar Falls, IA</h1>
+        <h1>Get Started on Your Kitchen Remodel in Cedar Falls and Cedar Rapids, IA</h1>
         <a class="btn btn-primary" href="#our-work">See Our Kitchen Renovations</a>
     </div>
 </div>
 <div class="subpage-content">
   <h2>Bring your dream kitchen to life</h2>
-    <p>T.E.A.M. Builders Ltd. completes kitchen renovations in Cedar Falls, IA and surrounding areas. Hire us to transform your outdated kitchen into a modern space you’ll enjoy spending time in for years to come.</p>
+    <p>T.E.A.M. Builders Ltd. completes kitchen renovations in Cedar Falls and Cedar Rapids, IA and surrounding areas. Hire us to transform your outdated kitchen into a modern space you’ll enjoy spending time in for years to come.</p>
     <br />
     <p>We’ll go over your kitchen remodeling ideas and offer advice during the design process. Once we’ve nailed down the design, we can install your new kitchen features without delay.</p>
     <br />
@@ -77,7 +77,7 @@
       <div class="text-align-left">
           <br />
           <h4 class="h1">What are the advantages of a kitchen remodel?</h4>
-          <p>T.E.A.M. Builders Ltd. can turn your tired-looking kitchen in the Cedar Falls, IA area into a comfortable, modern space. A kitchen renovation can:</p>
+          <p>T.E.A.M. Builders Ltd. can turn your tired-looking kitchen in the Cedar Falls and Cedar Rapids, IA area into a comfortable, modern space. A kitchen renovation can:</p>
           <ol>
             <li>Increase the value of your home</li>
             <li>Make your kitchen a safer place to work</li>
