--- a/pergolas.html
+++ b/pergolas.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.">
+    <meta name="description" content="T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -33,13 +33,13 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Make sure you hire an experienced deck and pergola builder in Cedar Falls, IA</h2>
+  <h2>Make sure you hire an experienced deck and pergola builder in Cedar Falls and Cedar Rapids, IA</h2>
     <p>Looking to add some structure and architecture to your backyard while blending the project into an existing living space? A pergola can be a great place to start!
     </p>
     <br />
     <p>Generally, a pergola is a wide-open structure with four support beams, no walls, and a decorative roof design, such as a lattice.  Commonly used for shade or even a touch of shelter from the elements, options are available to add a variety of customizable features such as screens that can be added to the roof or walls and strands of lights to decorate for evening and night time.</p>
     <br />
-    <p>T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls, IA area. Rely on us to build your custom deck quickly and correctly.</p>
+    <p>T.E.A.M. Builders LTD has experience building custom pergolas of all kinds on properties in the Cedar Falls and Cedar Rapids, IA area. Rely on us to build your custom deck quickly and correctly.</p>
     <br />
     <h3>Benefits of pergolas</h3>
     <div class="feature-container">
