--- a/roofing.html
+++ b/roofing.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders LTD provides roof installation and repair services in the Cedar Falls, IA area.">
+    <meta name="description" content="T.E.A.M. Builders LTD provides roof installation and repair services in the Cedar Falls and Cedar Rapids, IA area.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -43,7 +43,7 @@
   <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-Logo.png" alt="Malarkey Logo">
     <div class="row">
     <div class="col mr-5">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-img2.jpg" alt="Roofing in Cedar Falls, IA">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-img2.jpg" alt="Roofing in Cedar Falls and Cedar Rapids, IA">
             <h3 class="text-align-left">Windsor&reg; Scotchgard Features & Benefits</h3>
       <div class="feature-container">
         <div class="feature">
@@ -126,7 +126,7 @@
   <h2>Vista&reg; Shingles</h2>
   <div class="row">
     <div class="col mr-5">
-      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-img4.jpg" alt="Roofing in Cedar Falls, IA">
+      <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/Malarkey-img4.jpg" alt="Roofing in Cedar Falls and Cedar Rapids, IA">
       <h3 class="text-align-left">Vista&reg; Shingle Line Features & Benefits</h3>
       <div class="feature-container">
         <div class="feature">
@@ -233,8 +233,8 @@
   <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/roofing/architectural-shingles-1.png" alt="Shingle Options" style="width: 100%";>
       <div class="text-align-left">
         <br />
-        <h2>Get started on your roof installation project in Cedar Falls, IA</h2>
-    <p>Your search for experienced roofers ends here. T.E.A.M. Builders LTD provides roof installation and repair services in the Cedar Falls, IA area. We also specialize in roofing insurance claims and can help you navigate the insurance claim process from start to finish to get you the money for your roofing repair.
+        <h2>Get started on your roof installation project in Cedar Falls and Cedar Rapids, IA</h2>
+    <p>Your search for experienced roofers ends here. T.E.A.M. Builders LTD provides roof installation and repair services in the Cedar Falls and Cedar Rapids, IA area. We also specialize in roofing insurance claims and can help you navigate the insurance claim process from start to finish to get you the money for your roofing repair.
     </p>
     <br />
     <p>You can rely on our skilled roofing contractor to sit down with you, go over your roofing needs and help you choose a roofing material that’s right for your home. The Malarkey asphalt shingle roofing we install is both durable and attractive.</p>
@@ -248,7 +248,7 @@
       </div>
       <div class="col">
         <h4>Avoid water damage and annoying insect infestations</h4>
-        <p>Trust a roofing contractor at T.E.A.M. Builders to take care of your roof repairs in Cedar Falls, IA or surrounding areas. We can repair your roof if:</p>
+        <p>Trust a roofing contractor at T.E.A.M. Builders to take care of your roof repairs in Cedar Falls and Cedar Rapids, IA or surrounding areas. We can repair your roof if:</p>
         <ul>
           <li>• It's punctured, leaking, or sagging</li>
           <li>• It's holding water</li>
