--- a/shed-homes.html
+++ b/shed-homes.html
@@ -56,7 +56,7 @@
     <section class="gradient-banner">
       <div class="gradient-content">
         <span>
-          Don’t delay your remodeling project any longer. Contact us today to get started on your building or renovation project in Cedar Falls, IA.
+          Don’t delay your remodeling project any longer. Contact us today to get started on your building or renovation project in Cedar Falls and Cedar Rapids, IA.
         </span>
         <div class="triangle"></div>
         <a class="btn btn-secondary" href="/contact-us">Contact Us</a>
