--- a/siding.html
+++ b/siding.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <meta name="description" content="T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls, IA area. You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly.">
+    <meta name="description" content="T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls and Cedar Rapids, IA area. You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly.">
     <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188956910-1">
    </script>
@@ -33,7 +33,7 @@
     </div>
 </div>
 <div class="subpage-content">
-  <h2>Arrange for siding installation in Cedar Falls, IA</h2>
+  <h2>Arrange for siding installation in Cedar Falls and Cedar Rapids, IA</h2>
     <video class="siding-video" controls>
        <source src="https://teambuilders-media.s3.us-east-2.amazonaws.com/siding.mp4" type="video/mp4">
        Your browser does not support the video tag.
@@ -51,7 +51,7 @@
             <h2>Design in 3D</h2>
             <p>Allow us to help visualize your house with both color and material and give you a free quote</p>
     </div>
-    <p>Have you grown to hate the appearance of your outdated siding? It’s time to replace it. T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls, IA area. 
+    <p>Have you grown to hate the appearance of your outdated siding? It’s time to replace it. T.E.A.M. Builders LTD specializes in siding installation and repair services in the Cedar Falls and Cedar Rapids, IA area. 
     </p>
     <br />
     <p>You can count on us to remove your unsightly siding and replace it with quality vinyl siding that matches your home perfectly. We also specialize in adding stone wainscoting and shake peakes on gables for additional curb appeal to the exterior of your home. Look no further as we also provide siding design services to show you what your home will look like with the use of our siding installers.</p>
@@ -82,7 +82,7 @@ Will protect your home from the elements</p>
       <div class="text-align-left">
           <br />
           <h4 class="h1">Boost Your Curb Appeal With New Siding</h4>
-          <p>T.E.A.M. Builders offers siding repair and installation services in Cedar Falls, IA and surrounding areas. Installing new siding will:</p>
+          <p>T.E.A.M. Builders offers siding repair and installation services in Cedar Falls and Cedar Rapids, IA and surrounding areas. Installing new siding will:</p>
           <ol>
             <li>Improve the appearance of your home</li>
             <li>Increase your homes's energy efficiency</li>
