--- a/event-venues.html
+++ b/event-venues.html
@@ -28,7 +28,7 @@ gtag('config', 'UA-188956910-1');
     <nav id="navbar"></nav>
     <div class="hero-nav event">
     <div class="hero-nav__inner">
-        <h1>Event Venues in Cedar Falls, IA</h1>
+        <h1>Event Venues in Cedar Falls and Cedar Rapids, IA</h1>
         <a class="btn btn-primary" href="/contact-us">See Our Work</a>
     </div>
 </div>
